# HostService

./: .clang-format  .cmake-format  .gitmodules  CMakeLists.txt  Readme.md  arm-none-eabi.cmake
include/: AES.hpp  CMemory.hpp  CProperty.hpp  CPropertyHolder.hpp  CRange.hpp  Command.hpp  Common.hpp  Extra.hpp  FixedQueue.hpp  HostBase.hpp  HostClient.hpp  HostServer.hpp  Memory.hpp  Mutex.hpp  Property.hpp  PropertyBase.hpp  Range.hpp  RequestBuilder.hpp  String.hpp  Struct.hpp  Types.hpp
libs/frozen/: CMakeLists.txt  Readme.md
libs/frozen/frozen/include/frozen/: map.h
libs/libcrc/: CMakeLists.txt  Readme.md  gentab64.inc
libs/libcrc/tab/: gentab32.inc
libs/uAES/: CMakeLists.txt  README.md
libs/uAES/include/: uaes.h
src/: HostBase.cpp  HostClient.cpp  HostServer.cpp  PropertyBase.cpp
test/: CMakeLists.txt
test/include/: HostCS.hpp
test/src/: TCMemory.cpp  TCProperty.cpp  TCRange.cpp  TCSymbols.cpp  TExtra.cpp  TFixedQueue.cpp  THostBase.cpp  THostCS.cpp  TMemory.cpp  TProperty.cpp  TRange.cpp  TRead.cpp  TString.cpp  TStruct.cpp  TWrite.cpp
